--- a/zfoo/01.从开源到跑路-开源去中心化的网络库正式发布第一个release.md
+++ b/zfoo/01.从开源到跑路-开源去中心化的网络库正式发布第一个release.md
@@ -1,4 +1,4 @@
-# 一、诞生背景
+# 一、zfoo诞生背景
 
 ## 安全考虑，很多行业不需要公开协议格式的网络通信协议
 
@@ -78,7 +78,7 @@
 - [已经提交给 awesome godot](https://github.com/godotengine/awesome-godot)，目前没有看到比zfoo对GdScript支持更好的后端框架
 
 
-# 三、为什么正式开源过后就跑路了
+# 三、为什么正式开源zfoo过后就跑路了
 
 - 今年主要在研究ai技术，又有了新的思考
 
