--- a/zfoo/01.去中心化序列号框架-开源第一弹.md
+++ b/zfoo/01.去中心化序列号框架-开源第一弹.md
@@ -2,7 +2,9 @@
 
 ![Image text](image/a06.png)
 
-# 一、zfoo诞生背景
+- [zfoo protocol](https://github.com/zfoo-project/zfoo/tree/main/protocol)就是将序列化的方式交给每一个人，让每个人都拥有一套独一无二的协议，不依赖任何一个协议格式
+
+# 二、zfoo诞生背景
 
 ## 安全考虑，很多行业不需要公开协议格式的网络通信协议
 
@@ -66,10 +68,9 @@
 3.在线游戏需要稳定的连接，以避免玩家在游戏中遭遇掉线或断连等问题。稳定的连接是游戏进行的基础，游戏的中断或连接问题会严重影响玩家的游戏体验。
 ```
 
-
 - [如何看待《原神》私服流行的现象？](https://www.zhihu.com/question/531266095/answer/2502012979)
 
-# 二、zfoo介绍
+# 三、zfoo介绍
 
 <img src="image/a04.png" width="70%">
 
@@ -79,17 +80,10 @@
 
 ![Image text](image/a05.png)
 
-- [已经提交给 awesome godot](https://github.com/godotengine/awesome-godot)，目前没有看到比zfoo对GdScript支持更好的后端框架
+- [已经提交给 awesome godot](https://github.com/godotengine/awesome-godot)，目前没有看到比zfoo对GdScript支持更好的序列号框架
 
+# 四、性能对比
 
-# 三、为什么正式开源zfoo过后就跑路了
+- java的性能对比
 
-- 后端无论java还是goalng都区域稳定，开始研究其他方向
-
-- 今年主要在研究ai技术，又有了新的思考
-
-- 技术层面的zfoo目前已经没有什么值得更新的东西了，已经趋于稳定
-
-- 主要不会进行重大的更新了，以维护为主，并不是严格意义上的跑路，把精力会放在godot engine的游戏制作上
-
-- 开源项目不止一个开发者，将更多的权限交给其它开发者
+- GdScript的性能对比
