--- a/zfoo/01.去中心化序列号框架-开源第一弹.md
+++ b/zfoo/01.去中心化序列号框架-开源第一弹.md
@@ -82,8 +82,6 @@
 
 - [已经提交给 awesome godot](https://github.com/godotengine/awesome-godot)，目前没有看到比zfoo对GdScript支持更好的序列号框架
 
-# 四、性能对比
+# 四、GdScript的Protobuf
 
-- java的性能对比
-
-- GdScript的性能对比
+- [godobuf](https://github.com/oniksan/godobuf)，GdScript的Protobuf实现
