--- a/zfoo/03.云原生全场景的RPC框架-开源第三弹.md
+++ b/zfoo/03.云原生全场景的RPC框架-开源第三弹.md
@@ -1,5 +1,18 @@
 # 云原生 全场景的RPC框架
 
+- 什么是RPC
+```
+RPC（Remote Procedure Call，远程过程调用）是一种通信协议，用于不同计算机之间的进程间通信。它允许一个计算机上的程序能够调用另一个计算机上的程序，并且使它们就像本地调用一样简单。
+
+RPC的工作方式类似于本地过程调用（LPC），它隐藏了底层通信的细节，使开发人员可以将注意力集中在程序逻辑上，而不必担心网络通信的细节。
+
+使用RPC时，客户端应用程序发起一个远程调用请求到服务器端应用程序，并传送参数。远程服务器接收请求，并执行对应的远程过程。然后，它将结果返回给客户端，就好像调用本地过程一样。
+
+通过使用RPC，开发人员可以在不同的计算机上运行不同的程序，它们可以通过网络进行通信和协作，从而实现分布式系统的开发。RPC在分布式计算、微服务架构和跨平台应用程序中被广泛使用。
+```
+
+- [zfoo-sdk-gdscript-godot](https://github.com/zfoo-project/zfoo-sdk-gdscript-godot)就是一个GdScript的RPC
+
 - [zfoo net](https://github.com/zfoo-project/zfoo/tree/main/net) 极致性能，天生异步，Actor设计思想，无锁化设计，全场景RPC框架，native GraalVM支持
 
 - [zookeeper 下载](https://zookeeper.apache.org/releases.html)
