--- a/zfoo/04.C#和lua正式支持zfoo-开源第四弹.md
+++ b/zfoo/04.C#和lua正式支持zfoo-开源第四弹.md
@@ -1,5 +1,6 @@
 # zfoo sdk of csharp and lua for unity and godot
 
+- 不仅能用在unity也能用在godot上
 
 - [zfoo-sdk-csharp-lua-unity-godot](https://github.com/zfoo-project/zfoo-sdk-csharp-lua-unity-godot)
 
