--- a/zfoo/05.TypeScript和JavaScript正式支持zfoo-开源第五弹.md
+++ b/zfoo/05.TypeScript和JavaScript正式支持zfoo-开源第五弹.md
@@ -1,4 +1,4 @@
-# zfoo sdk of csharp and lua for unity and godot
+# zfoo sdk typescript javascript cocos web h5
 
 - TypeScript和JavaScript都能使用
 - 普通的web前端项目，比如vue，react等都能使用
