--- a/gdscript/02-什么是编程以及编程的重要性.md
+++ b/gdscript/02-什么是编程以及编程的重要性.md
@@ -1,6 +1,6 @@
 ## 什么是编程以及编程的重要性
 
-- ![img.png](image/img001.png)
+![img.png](image/img001.png)
 
 
 ```text
@@ -38,4 +38,74 @@
 学习一门编程语言对于成为一名程序员非常重要，因为编程语言是程序员与计算机之间通信的桥梁，通过掌握不同的编程语言，程序员可以应对不同的编程需求，扩展自己的技能和能力。
 ```
 
-- [计算机科学速成课](https://www.bilibili.com/video/BV1EW411u7th)
+```text
+问：编程语言的重要性
+```
+
+```text
+编程语言的重要性在于它提供了一种与计算机进行交流和沟通的方式。通过学习一门编程语言，程序员可以编写代码来实现特定的功能或解决问题。
+
+编程语言的使用范围广泛，从开发网站、移动应用到游戏开发等各种领域都有相应的编程语言选择。不同的编程语言适用于不同的需求和场景，因此掌握多种编程语言对于成为一名成功的程序员非常重要。
+
+此外，学习一门编程语言还可以提高逻辑思维能力、问题解决能力和创造力。通过编写代码来解决问题，程序员需要分析问题的结构、找出解决方案并进行验证，这有助于培养他们的思考方式和解决问题的能力。
+
+总之，编程语言的重要性在于它提供了一种与计算机交流的方式，并且对于成为一名成功的程序员来说是至关重要的技能之一。
+```
+
+```text
+编程语言在现代社会中扮演着非常重要的角色，其重要性主要体现在以下几个方面：
+
+1. 实现功能：编程语言是程序员用来描述计算机执行特定操作的工具。通过编程语言，程序员可以编写代码来实现各种功能，如开发应用程序、网站、游戏等。
+
+2. 自动化处理：编程语言能够帮助人们简化重复性、复杂性的工作。通过编写程序，可以实现自动化处理和批量操作，提高工作效率和准确性。
+
+3. 创新发展：编程语言是科学技术发展的重要基础。通过编程语言，人们可以实现各种创新性的想法，推动科学技术的进步，创造出更多的新产品、新服务等。
+
+4. 数据处理与分析：编程语言在数据处理和分析领域有着广泛的应用。通过编写程序，可以对大量数据进行快速处理和分析，提取有价值的信息，支持决策和研究。
+
+5. 增强逻辑思维：学习和掌握编程语言可以培养人们的逻辑思维能力和问题解决能力。通过编程，人们可以锻炼自己的逻辑思维，培养抽象化和系统化思维能力。
+
+总的来说，编程语言在数字化时代发挥着重要的作用，不仅对技术人员和程序员有意义，对普通人来说，了解一些编程语言也有助于更好地适应和理解数字化社会的发展。
+```
+
+```text
+问：编程语言在各行各业的应用有哪些
+```
+
+```text
+编程语言在资金借贷领域中有着广泛的应用，主要体现在以下几个方面：
+
+1. 金融交易平台开发：通过编写程序和使用特定的编程语言（如Java、Python等），可以实现各种金融交易平台的功能。这些平台可以用于股票交易、外汇交易、期货交易等领域。
+
+2. 数据分析与预测模型构建：在资金借贷领域中，数据处理和分析非常重要。通过编写代码来进行数据分析，可以提取有用的信息并建立相应的预测模型，帮助投资者做出更明智的决策。
+
+3. 智能合约开发：区块链技术的发展使得智能合约成为一种重要的金融工具。编程语言可以用于开发各种类型的智能合约，实现资金借贷、资产交易等功能。
+
+4. 风险管理与反欺诈系统设计：通过编写程序和使用特定的编程语言（如Python），可以构建复杂的风险管理系统和反欺诈系统。这些系统可以帮助金融机构识别潜在的风险并采取相应的措施来保护投资者的利益。
+
+5. 自动化投资策略开发：利用编程语言可以实现各种自动交易策略的设计与实施。通过编写代码来自动执行特定的投资决策，可以提高资金借贷的效率和准确性。
+
+总之，在资金借贷领域中，编程语言的应用可以帮助金融机构更好地管理风险、提供更好的服务以及提升投资者的体验。
+```
+
+```text
+编程语言在各行各业都有广泛的应用，以下是一些常见领域和相应的应用：
+
+1. 软件开发：编程语言是软件开发的基础，程序员使用不同的编程语言来开发各种应用程序和系统，包括桌面应用、移动应用、网站、数据库等。
+
+2. 数据分析和人工智能：数据科学家和机器学习工程师使用编程语言来处理和分析大量数据，并构建智能算法和模型，以支持数据驱动的决策和解决问题。
+
+3. 金融和财务：编程语言在金融领域被广泛应用，用于开发交易系统、风险管理工具、金融模型等，帮助机构进行金融交易和投资决策。
+
+4. 医疗保健：医疗领域利用编程语言开发医疗信息系统、健康管理应用、医学图像分析工具等，以提高医疗诊断和治疗的效率和准确性。
+
+5. 制造业和工程：编程语言在制造业和工程领域被用于控制生产过程、优化生产计划、设计和模拟产品等，提高生产效率和质量。
+
+6. 教育和培训：编程语言作为一种重要的技能被广泛纳入教育和培训中，帮助学生和职场人员提升逻辑思维、问题解决和创新能力。
+
+7. 农业和环境保护：编程语言可用于农业生产管理、资源优化、环境监测等领域，支持精准农业和可持续的环境保护措施。
+
+总的来说，编程语言在各行各业的应用越来越广泛，对于提高工作效率、创新能力和解决实际问题都有着重要作用。掌握一些编程语言基础知识，可以帮助个人在不同领域有更多的发展机会和竞争力。
+```
+
+- [计算机科学速成课](https://www.bilibili.com/video/BV1EW411u7th)，学习P10/P11的内容
