--- a/gdscript/02-什么是编程以及编程的重要性.md
+++ b/gdscript/02-什么是编程以及编程的重要性.md
@@ -2,10 +2,8 @@
 
 ![img.png](image/img001.png)
 
-
-```text
-问：什么是编程
-```
+-----------
+> 问：什么是编程
 
 ```text
 编程是一种使用特定的语言和工具来编写计算机程序的过程。它涉及设计、开发和测试软件，以解决各种问题或实现特定功能。
@@ -17,9 +15,8 @@
 需要程序员具有一定的逻辑思维和技术能力，同时也需要不断学习和实践来提升自己的编程技能。
 ```
 
-```text
-问：什么是编程语言
-```
+-----------
+> 问：什么是编程语言
 
 ```text
 编程语言是程序员与计算机交流的工具，通过编写代码来指导计算机执行特定任务。不同的编程语言具有各自的特点和用途，常见的编程语言包括：
@@ -38,9 +35,8 @@
 学习一门编程语言对于成为一名程序员非常重要，因为编程语言是程序员与计算机之间通信的桥梁，通过掌握不同的编程语言，程序员可以应对不同的编程需求，扩展自己的技能和能力。
 ```
 
-```text
-问：编程语言的重要性
-```
+-----------
+> 问：编程语言的重要性
 
 ```text
 编程语言的重要性在于它提供了一种与计算机进行交流和沟通的方式。通过学习一门编程语言，程序员可以编写代码来实现特定的功能或解决问题。
@@ -68,9 +64,8 @@
 总的来说，编程语言在数字化时代发挥着重要的作用，不仅对技术人员和程序员有意义，对普通人来说，了解一些编程语言也有助于更好地适应和理解数字化社会的发展。
 ```
 
-```text
-问：编程语言在各行各业的应用有哪些
-```
+-----------
+> 问：编程语言在各行各业的应用有哪些
 
 ```text
 编程语言在资金借贷领域中有着广泛的应用，主要体现在以下几个方面：
