--- a/gdscript/01-简介.md
+++ b/gdscript/01-简介.md
@@ -1,5 +1,11 @@
 ## 简介
 
+### 为什么要做GdScript教程
+
+- 发现不少学godot的人编程经验是不够的，之前我说让他们先学一个强类型的语言，但是大部分人不愿意主动去学的
+- 目前国内外没有太好的GdScript语言教程，这种情况下指望新手去学习就更难了
+- 在AI加持下，去学一门语言，去做一个教程的难度指数级下降，时机已经成熟
+
 ### 使用AI来生成小学生都能看懂的教学提纲
 
 > 问：有个小学生，只学过算术，如何教这个小学生学会GdScript，帮我制定一个教学计划
