--- a/gdscript/11-进位的制度-易有两仪是生两仪.md
+++ b/gdscript/11-进位的制度-易有两仪是生两仪.md
@@ -1,6 +1,6 @@
 ## 进位的制度
 
-- 【【计算机科学速成课】[40集全/精校] - Crash Course Computer Science】 https://www.bilibili.com/video/BV1EW411u7th/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
+- 【这幅图中，蕴含着宇宙的秘密，太极代表什么？二进制与太极阴阳】 https://www.bilibili.com/video/BV1mB4y1D7Fr/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
 - 【关于进制的全部】 https://www.bilibili.com/video/BV1ap4y197Ms/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
 
 
