--- a/gdscript/24-代码结构的基本概念.md
+++ b/gdscript/24-代码结构的基本概念.md
@@ -1,8 +1,5 @@
 ## 条件语句的概念
 
--
-
-【#编程通识#第九课，什么是条件语句】 https://www.bilibili.com/video/BV1R4411G7rH/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
 
 - 顺序结构
 
@@ -13,3 +10,7 @@
 - 循环结构
     - for循环
     - while循环
+
+- 函数
+
+- 类和对象
