--- a/gdscript/35-函数.md
+++ b/gdscript/35-函数.md
@@ -1,2 +1,4 @@
 
+- 【#编程通识#第十二课，什么是计算机函数？】 https://www.bilibili.com/video/BV1R4411G7vh/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
+
 - 【#编程通识#第十三课，变量的作用范围是什么？】 https://www.bilibili.com/video/BV1R4411G7zp/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
