--- a/gdscript/28-面向对象编程的基本概念.md
+++ b/gdscript/28-面向对象编程的基本概念.md
@@ -1,6 +1,9 @@
 ## 面向对象编程的基本概念
 
 
+【5分钟通俗讲解面向对象编程】 https://www.bilibili.com/video/BV1pq4y1t7nA/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
+
+
 【8分钟搞懂面向对象编程 | 面向过程vs面向对象 | OOP | 封装 继承 多态】 https://www.bilibili.com/video/BV1wZ4y1B7A7/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
 
 
