--- a/gdscript/29-类的定义和对象的创建.md
+++ b/gdscript/29-类的定义和对象的创建.md
@@ -1,11 +1,6 @@
 ## 类的定义和对象的创建
 
 
-【【每天一个技术点】封装】 https://www.bilibili.com/video/BV11b4y1p7Uu/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
+【[27] Python创建类（上）| 没对象？实例化一个】 https://www.bilibili.com/video/BV1KT4y1q7kv/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
 
-
-## 类的封装继承和多态
-
-
-
-## 鸟了个鸟工程解析-标准的面向对象编程
+【[28] Python创建类（下）| 当上帝的时刻到了】 https://www.bilibili.com/video/BV1ug411R7Yz/?share_source=copy_web&vd_source=5dbf211eec08e51a4c6d136972063c73
