--- a/3d/02-矩阵的线性变换.md
+++ b/3d/02-矩阵的线性变换.md
@@ -10,15 +10,20 @@
 ![img.png](image/matrices-03.png)
 
 ## 3. 没有交换律
+
 ![img.png](image/matrices-04.png)
 ![img.png](image/matrices-05.png)
 
 ## 4. 矩阵的转置
+
 ![img.png](image/matrices-06.png)
 
 ## 5. 单位矩阵，矩阵的逆
 
 ![img.png](image/matrices-07.png)
+
+## 6. 向量的乘法可以用矩阵表示
+
 ![img.png](image/matrices-08.png)
 
 # 矩阵的线性变换
@@ -55,8 +60,10 @@
 ![img.png](image/matrices-24.png)
 
 ## 仿射变换
+
 ![img.png](image/matrices-25.png)
 ![img.png](image/matrices-26.png)
 
 ## 变换的合成和分解
+
 ![img.png](image/matrices-28.png)
