--- a/3d/00-矩阵基础.md
+++ b/3d/00-矩阵基础.md
@@ -1,6 +1,11 @@
+# 数学体系
+
+![img.png]( image/base.png)
+![img.png]( image/base1.png)
+
 # 矩阵的秩
 
-## 1. 矩阵是由线性房产证的解演化而来的，初等行变化不改变矩阵的秩·
+## 1. 矩阵是由线性方程组的解演化而来的，初等行变化不改变矩阵的秩
 
 ![img.png]( image/base-00.png)
 ![img.png]( image/base-01.png)
@@ -39,3 +44,18 @@
 ![img.png](image/base-11.png)
 ![img.png](image/base-12.png)
 ![img.png](image/base-13.png)
+
+## 6. 方阵
+
+![img.png](image/base-15.png)
+![img.png](image/base-20.png)
+![img.png](image/base-25.png)
+![img.png](image/base-26.png)
+![img.png](image/base-16.png)
+
+## 7. 总结
+
+![img.png](image/base-14.png)
+
+
+# 矩阵的乘法的性质
