--- a/3d/00-矩阵基础.md
+++ b/3d/00-矩阵基础.md
@@ -1,6 +1,9 @@
 # 数学体系
 
 ![img.png]( image/base.png)
+
+## 矩阵的初等行变换和高斯消元的关系
+
 ![img.png]( image/base1.png)
 
 # 矩阵的秩
@@ -57,5 +60,18 @@
 
 ![img.png](image/base-14.png)
 
-
 # 矩阵的乘法的性质
+
+## 1. 初等行变换和单位矩阵变换的关系
+![img.png](image/base-30.png)
+![img.png](image/base-31.png)
+![img.png](image/base-32.png)
+![img.png](image/base-33.png)
+![img.png](image/base-34.png)
+
+## 2. 矩阵的逆
+![img.png](image/base-36.png)
+![img.png](image/base-37.png)
+![img.png](image/base-38.png)
+![img.png](image/base-39.png)
+![img.png](image/base-40.png)
