--- a/3d/02-矩阵的线性变换.md
+++ b/3d/02-矩阵的线性变换.md
@@ -28,42 +28,44 @@
 
 # 矩阵的线性变换
 
-## 定义，能用下面公式表示的都是线性变换
+## 1. 定义，能用下面公式表示的都是线性变换
 
 ![img.png](image/matrices-15.png)
 
-## 缩放
+## 2. 缩放
 
 ![img.png](image/matrices-18.png)
 
-## 非均匀的缩放
+## 3. 非均匀的缩放
 
 ![img.png](image/matrices-19.png)
 
-## 反射，对称操作
+## 4. 反射，对称操作
 
 ![img.png](image/matrices-20.png)
 
-## 切边
+## 5. 切边
 
 ![img.png](image/matrices-21.png)
 
-## 旋转
+## 6. 旋转
 
 ![img.png](image/matrices-22.png)
 
-# 齐次坐标
-
-## 平移无法使用线性变换公式，所以引入了齐次坐标
+## 7. 平移无法使用线性变换公式，所以引入了齐次坐标
 
 ![img.png](image/matrices-23.png)
 ![img.png](image/matrices-24.png)
 
-## 仿射变换
+## 8. 仿射变换
 
 ![img.png](image/matrices-25.png)
 ![img.png](image/matrices-26.png)
 
-## 变换的合成和分解
+## 9. 变换的合成和分解
 
 ![img.png](image/matrices-28.png)
+
+## 10. 3d变换
+
+![img.png](image/matrices-40.png)
