--- a/3d/00-矩阵基础.md
+++ b/3d/00-矩阵基础.md
@@ -63,15 +63,36 @@
 # 矩阵的乘法的性质
 
 ## 1. 初等行变换和单位矩阵变换的关系
+
 ![img.png](image/base-30.png)
-![img.png](image/base-31.png)
 ![img.png](image/base-32.png)
 ![img.png](image/base-33.png)
 ![img.png](image/base-34.png)
 
 ## 2. 矩阵的逆
+
 ![img.png](image/base-36.png)
 ![img.png](image/base-37.png)
 ![img.png](image/base-38.png)
 ![img.png](image/base-39.png)
 ![img.png](image/base-40.png)
+![img.png](image/base-41.png)
+
+## 3. 求逆矩阵
+
+![img.png](image/base-42.png)
+
+## 4. 矩阵方程的求解，对应的线性方程组解的关系
+
+![img.png](image/base-43.png)
+![img.png](image/base-44.png)
+
+
+# 行列式
+## 1. 行列式的定义
+![img.png](image/determinant-01.png)
+![img.png](image/determinant-02.png)
+![img.png](image/determinant-03.png)
+
+
+
