--- a/3d/02-矩阵的线性变换.md
+++ b/3d/02-矩阵的线性变换.md
@@ -65,6 +65,8 @@
 ## 9. 变换的合成和分解
 
 ![img.png](image/matrices-28.png)
+![img.png](image/matrices-29.png)
+![img.png](image/matrices-30.png)
 
 ## 10. 3d变换
 
