--- a/3d/00-矩阵基础.md
+++ b/3d/00-矩阵基础.md
@@ -91,8 +91,29 @@
 # 行列式
 ## 1. 行列式的定义
 ![img.png](image/determinant-01.png)
-![img.png](image/determinant-02.png)
+![img.png](image/determinant-04.png)
+
+
+## 2. 行列式的通用求法，利用初等变换的性质化为对角阵，需要记住变换的操作，实际计算比较麻烦
 ![img.png](image/determinant-03.png)
+![img.png](image/determinant-05.png)
+![img.png](image/determinant-02.png)
+![img.png](image/determinant-06.png)
+
+## 3. 行列式的值和线性方程组有没有解有关系，因为要求行列式的值一定要把它化为对角阵，所以不等于0的条件就是矩阵可逆
+![img.png](image/determinant-07.png)
+![img.png](image/determinant-08.png)
+
+## 4. 伴随矩阵
+![img.png](image/determinant-09.png)
+
+## 5. 意义不大，应试教育的弊端，为了考而考，实在没意义
+![img.png](image/determinant-10.png)
 
 
+# 分块阵
 
+## 1. 分块阵也满足乘法
+![img.png](image/base-50.png)
+![img.png](image/base-51.png)
+![img.png](image/base-52.png)
